search: add translations also fix some layout issues

--- a/web-ui/src/main/resources/catalog/views/sextant/less/gn_mapviewer_sextant.less
+++ b/web-ui/src/main/resources/catalog/views/sextant/less/gn_mapviewer_sextant.less
@@ -702,7 +702,6 @@
   border-radius: 2px;
   font-size: 12px;
   &.popover-dropdown .popover-content {
-    padding: 0;
     display: table-cell;
     height: 190px;
     vertical-align: middle;
