--- a/web-ui/src/main/resources/catalog/views/sextant/less/gn_search_sextant.less
+++ b/web-ui/src/main/resources/catalog/views/sextant/less/gn_search_sextant.less
@@ -238,7 +238,7 @@
 
   }
   .btn, .popover-content {
-    padding: 3px 10px 2px;
+    padding: 6px 10px 5px;
     text-transform: uppercase;
     font-size: 12px;
     font-weight: bold;
